garminupload/01-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: garmin-upload
  labels:
    name: garmin-upload
