garminupload/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: garmin-upload
  namespace: garmin-upload
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: garmin-upload
  policyTypes:
    - Ingress
    - Egress
  ingress: []
  egress:
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 443
    - to:
        - podSelector:
            matchLabels:
              app: registry
      ports:
        - port: 5000
